rancher-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
  namespace: default
spec:
  replicas: 20
  selector:
    matchLabels:
      app: rancher-demo
  template:
    metadata:
      labels:
        app: rancher-demo
    spec:
      containers:
      - name: rancher-demo
        image: bashofmann/rancher-demo:latest
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        readinessProbe:
          httpGet:
            port: web
            path: /demo
