rancher-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo-service
  namespace: default
spec:
  selector:
    app: rancher-demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
