rancher-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-demo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rancher-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher-demo-service
            port: 
              number: 80
